--- a/content/post/current24_5k.adoc
+++ b/content/post/current24_5k.adoc
@@ -32,17 +32,17 @@ image::/images/2024/09/austin-dawn.jpg[alt="Austin in the dawn light"]
 == Who? What? Where? When? 
 
 * _Who_:  Anyone who would like to is very welcome :) 
-* _What_: A 5k (3.1 miles) run or walk from the conference hotel around the waterfront in Austin 
+* _What_: A 5k (3.1 miles) run or walk around the waterfront in Austin
 +
 +++
-<div class="strava-embed-placeholder" data-embed-type="route" data-embed-id="2995266884593750870" data-full-width="true" data-hide-elevation="true" data-style="standard" data-map-hash="13.22/30.25539/-97.74019" data-from-embed="true"></div><script src="https://strava-embeds.com/embed.js"></script>
+<div class="strava-embed-placeholder" data-embed-type="route" data-embed-id="3265727282680501586" data-hide-elevation="true" data-style="standard" data-map-hash="13.16/30.25568/-97.74019" data-from-embed="true"></div><script src="https://strava-embeds.com/embed.js"></script>
 +++
-* _Where_: Starting from the conference hotel (https://www.fairmont.com/austin/[Fairmont Austin])
+* _Where_: Starting from the https://www.marriott.com/en-gb/hotels/travel/ausmd-austin-marriott-downtown[Austin Marriott Downtown]
 * _When_: **Tuesday 17th September**.
 
-We'll **meet at 06:30** in the foyer of the https://www.fairmont.com/austin/[Fairmont Austin]. That'll give us time to congrgate and take some https://twitter.com/search?q=%23streamingselfie%20%23kafkasummit%20since%3A2022-04-20&src=typed_query&f=live[`#streamingselfie`]s if you want them, before setting off at *06:35 sharp* to make our way around the https://www.strava.com/routes/2995266884593750870[the 5k route].
+We'll **meet at 06:30** in the foyer of the https://www.marriott.com/en-gb/hotels/travel/ausmd-austin-marriott-downtown[Austin Marriott Downtown] (just near the convention center). That'll give us time to congrgate and take some https://twitter.com/search?q=%23streamingselfie%20%23kafkasummit%20since%3A2022-04-20&src=typed_query&f=live[`#streamingselfie`]s if you want them, before setting off at *06:35 sharp* to make our way around the https://www.strava.com/routes/3265727282680501586[the 5k route].
 
-Go at your own pace; this isn't a race. You can run, or walk. Or skip, if you prefer. You can https://www.strava.com/routes/2995266884593750870[download the route] to follow at your leisure. In fact, it's a good idea to do so because this is not an organised event, so it's your responsibility not to get lost :-D
+Go at your own pace; this isn't a race. You can run, or walk. Or skip, if you prefer. You can https://www.strava.com/routes/3265727282680501586[download the route] to follow at your leisure. In fact, it's a good idea to do so because this is not an organised event, so it's your responsibility not to get lost :-D
 
 At 6min/km it'll take half an hour to get round the 5k route. That should give you plenty of time to then take some more https://twitter.com/search?q=%23streamingselfie%20%23kafkasummit%20since%3A2022-04-20&src=typed_query&f=live[`#streamingselfie`]s before heading back into the hotel for breakfast and ready for the **start of the conference at 08:00** (https://events.bizzabo.com/599116/agenda/session/1336760[breakfast] at 0800, https://events.bizzabo.com/599116/agenda/session/1336742[keynote] at 0900).
 
