Add GMaps embed

--- a/content/post/current24_5k.adoc
+++ b/content/post/current24_5k.adoc
@@ -46,6 +46,10 @@ Go at your own pace; this isn't a race. You can run, or walk. Or skip, if you pr
 
 At 6min/km it'll take half an hour to get round the 5k route. That should give you plenty of time to then take some more https://twitter.com/search?q=%23streamingselfie%20%23kafkasummit%20since%3A2022-04-20&src=typed_query&f=live[`#streamingselfie`]s before heading back into the hotel for breakfast and ready for the **start of the conference at 08:00** (https://events.bizzabo.com/599116/agenda/session/1336760[breakfast] at 0800, https://events.bizzabo.com/599116/agenda/session/1336742[keynote] at 0900).
 
++++
+<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1Ijdsn04Yk0nWXz0Tvp9BSQbwT7AjbRk&ehbc=2E312F&noprof=1" width="640" height="480"></iframe>
++++
+
 === How en-lightening! 🔦
 
 You might consider bringing a head torch—a few bits of the route down by the river are unlit, and https://www.timeanddate.com/sun/usa/austin[sunrise isn't until 07:08].
