--- a/content/post/current24_5k.adoc
+++ b/content/post/current24_5k.adoc
@@ -40,7 +40,7 @@ image::/images/2024/09/austin-dawn.jpg[alt="Austin in the dawn light"]
 * _Where_: Starting from the https://www.marriott.com/en-gb/hotels/travel/ausmd-austin-marriott-downtown[Austin Marriott Downtown]
 * _When_: **Tuesday 17th September**.
 
-We'll **meet at 06:30** in the foyer of the https://www.marriott.com/en-gb/hotels/travel/ausmd-austin-marriott-downtown[Austin Marriott Downtown] (just near the convention center). That'll give us time to congrgate and take some https://twitter.com/search?q=%23streamingselfie%20%23kafkasummit%20since%3A2022-04-20&src=typed_query&f=live[`#streamingselfie`]s if you want them, before setting off at *06:35 sharp* to make our way around the https://www.strava.com/routes/3265727282680501586[the 5k route].
+We'll **meet at 06:30** in the foyer of the https://www.marriott.com/en-gb/hotels/travel/ausmd-austin-marriott-downtown[Austin Marriott Downtown] (just near the convention center). That'll give us time to congregate and take some https://twitter.com/search?q=%23streamingselfie%20%23kafkasummit%20since%3A2022-04-20&src=typed_query&f=live[`#streamingselfie`]s if you want them, before setting off at *06:35 sharp* to make our way around the https://www.strava.com/routes/3265727282680501586[the 5k route].
 
 Go at your own pace; this isn't a race. You can run, or walk. Or skip, if you prefer. You can https://www.strava.com/routes/3265727282680501586[download the route] to follow at your leisure. In fact, it's a good idea to do so because this is not an organised event, so it's your responsibility not to get lost :-D
 
@@ -60,7 +60,7 @@ Courtesy of https://decodable.co[Decodable], there'll be some exclusive, never-t
 
 image::/images/2024/09/current24-5k-sticker.webp[Current 2024 5k run/walk sticker]
 
-Swing by our booth in the expo hall to collect yours :)
+Swing by our booth #204 in the expo hall to collect yours :)
 
 == Cool, where do I register?
 
