--- a/content/post/vale-asciidoc-disable.adoc
+++ b/content/post/vale-asciidoc-disable.adoc
@@ -1,5 +1,5 @@
 ---
-draft: true
+draft: false
 title: 'Disabling Vale Linting Selectively in Asciidoc'
 date: "2024-12-11T12:05:07Z"
 image: "/images/2024/12/"
