--- a/content/post/vale-asciidoc-disable.adoc
+++ b/content/post/vale-asciidoc-disable.adoc
@@ -2,8 +2,8 @@
 draft: false
 title: 'Disabling Vale Linting Selectively in Asciidoc'
 date: "2024-12-11T12:05:07Z"
-image: "/images/2024/12/"
-thumbnail: "/images/2024/12/"
+image: "/images/2024/12/h_IMG_6387.webp"
+thumbnail: "/images/2024/12/t_IMG_6386.webp"
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - asciidoc
@@ -309,5 +309,4 @@ Vale output is as expected:
  6:44   error       Use 'don't' instead of 'do      Microsoft.Contractions
                     not'.
  15:32  suggestion  'FUBAR' has no definition.      Microsoft.Acronyms
-----
 ----
