--- a/content/post/links-2025-02.adoc
+++ b/content/post/links-2025-02.adoc
@@ -2,8 +2,8 @@
 draft: false
 title: 'Interesting links - February 2025'
 date: "2025-02-03T20:49:01Z"
-image: "/images/2025/02/"
-thumbnail: "/images/2025/02/"
+image: "/images/2025/02/h_IMG_7719.webp"
+thumbnail: "/images/2025/02/t_IMG_7777.webp"
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - Interesting links
