--- a/content/post/links-2025-02.adoc
+++ b/content/post/links-2025-02.adoc
@@ -28,12 +28,12 @@ Here's a bunch of interesting links and articles about data that I've come acros
 * Two Apache projects were https://news.apache.org/foundation/entry/the-apache-software-foundation-announces-new-top-level-projects[recently announced] as graduating to top-level projects, including https://streampark.apache.org/[Apache StreamPark].
 * Excellent analysis from Jack Vanlightly looking at https://jack-vanlightly.com/blog/2025/2/3/why-snowflake-wants-streaming[Why Snowflake wants streaming] (specifically, Redpanda, about whom acquisition rumours are swirling).
 * A new Kafka TUI called https://github.com/dhth/kplay[kplay], and GUI called https://kafkio.com/features[KafkIO].
-* What better way to learn the low-level details of Kafka than https://www.reddit.com/r/apachekafka/comments/1hnkrzi/monkafka_building_a_kafka_broker_from_scratch/[writing your own broker]…
+* What better way to learn the low-level details of Kafka than https://www.reddit.com/r/apachekafka/comments/1hnkrzi/monkafka_building_a_kafka_broker_from_scratch/[writing your own broker].
 * Confluent recently launched https://marketplace.visualstudio.com/items?itemName=confluentinc.vscode-confluent[a VSCode plugin] which now https://old.reddit.com/r/apachekafka/comments/1hfr68m/the_confluent_extension_for_vs_code_now_supports/[supports Kafka clusters too] (not just Confluent Cloud).
 * A fantastic deep-dive blog on https://www.warpstream.com/blog/kafka-transactions-explained-twice[Kafka transactions].
 * A nicely explained and illustrated guide to https://www.responsive.dev/blog/windows-and-time-kafka-streams-101[windowing in Kafka Streams].
 * Mickael Maison has now been writing the https://developers.redhat.com/blog/2025/02/03/kafka-monthly-digest-january-2025[Kafka Monthly Digest] for an impressive seven years!
 * https://github.com/hyprstream/hyprstream[Hyprstream] is a built on Apache Arrow Flight and DuckDB for "real-time data ingestion, windowed aggregation, caching, and serving". Read the associated paper https://github.com/hyprstream/hyprstream?tab=readme-ov-file[here].
 * https://renegadeotter.com/2023/11/12/your-database-skills-are-not-good-to-have.html[Your Database Skills Are Not 'Good to Have']
-* Uber run 2,300 MySQL clusters—https://www.uber.com/en-GB/blog/mysql-at-uber/[this post] has details of how they do it.
+* Uber run 2,300 MySQL clusters— https://www.uber.com/en-GB/blog/mysql-at-uber/[this post] has details of how they do it.
 
