--- a/content/post/duckdb1.adoc
+++ b/content/post/duckdb1.adoc
@@ -1,5 +1,5 @@
 ---
-draft: true
+draft: false
 title: 'DuckDB tricks - renaming fields in a SELECT * across tables'
 date: "2025-02-27T09:43:20Z"
 image: "/images/2025/02/h_IMG_8100.webp"
