link databs hashtag

--- a/content/post/duckdb1.adoc
+++ b/content/post/duckdb1.adoc
@@ -60,7 +60,7 @@ I *could* `DESCRIBE` each table, scrape the fields into a text editor, and use a
 
 ## DuckDB `COLUMNS` to the rescue
 
-Thanks to https://bsky.app/profile/did:plc:e3fe54cbnttcggrmze2al2vk[Alex Monahan] on Bluesky (`#dataBS` FTW!), who pointed me at the https://duckdb.org/docs/sql/expressions/star.html#columns-expression[`COLUMNS` expression].
+Thanks to https://bsky.app/profile/did:plc:e3fe54cbnttcggrmze2al2vk[Alex Monahan] on Bluesky (https://bsky.app/hashtag/databs[`#dataBS`] FTW!), who pointed me at the https://duckdb.org/docs/sql/expressions/star.html#columns-expression[`COLUMNS` expression].
 https://duckdbsnippets.com/snippets/204/label-columns-based-on-source-table[This nice example] illustrates it in action.
 
 Applied to my query above, it looks like this: 
