--- a/content/post/flink-joins01.adoc
+++ b/content/post/flink-joins01.adoc
@@ -54,11 +54,11 @@ ____
 
 As I learn more about Flink SQL I thought it would be interesting to try and answer this.
 
-I’m using the Filesystem connector just because it’s quicker than setting up the necessary dependencies for something else—in practice the source of streaming data would often be Kafka.
+TIP: Shortly before publishing this, my esteemed colleague Martijn Visser pointed me to https://docs.confluent.io/cloud/current/flink/how-to-guides/combine-and-track-most-recent-records.html[this doc] that details a more elegant way of writing the query—and which highlights several key reasons why my naïve approach that I show below of a simple `JOIN` https://docs.confluent.io/cloud/current/flink/how-to-guides/combine-and-track-most-recent-records.html#why-union-all-vs-join[might not be such a good idea]. This is something for me to dig into (I do believe learning watermarks might be on the cards 🫣), so stay tuned 😁
 
 == Create the source tables
 
-TIP: You can try out this full article using https://github.com/rmoff/flink-examples/tree/main/flink[this Docker Compose] to run Flink and the Flink SQL client.
+NOTE: You can try out this full article using https://github.com/rmoff/flink-examples/tree/main/flink[this Docker Compose] to run Flink and the Flink SQL client.
 
 
 Based on the details above (kudos to the OP for a well-structured and informative question), I created two Flink SQL tables:
@@ -85,6 +85,8 @@ CREATE TABLE items_b (
     'format' = 'csv'
 );
 ----
+
+I’m using the Filesystem connector just because it’s quicker than setting up the necessary dependencies for something else—in practice the source of streaming data would often be Kafka.
 
 == Populate some source data
 
@@ -663,4 +665,3 @@ taskmanager-1  | -D[2, null, 2025-03-06T12:01:30, null, item_b_2]
 taskmanager-1  | +I[2, 2025-03-06T10:01, 2025-03-06T12:01:30, item_a_2, item_b_2]
 ----
 
-TIP: Shortly before publishing this, my esteemed colleague Martijn Visser pointed me to https://docs.confluent.io/cloud/current/flink/how-to-guides/combine-and-track-most-recent-records.html[this doc] that details a more elegant way of writing the query—and which highlights several key reasons why my naïve approach of a simple `JOIN` https://docs.confluent.io/cloud/current/flink/how-to-guides/combine-and-track-most-recent-records.html#why-union-all-vs-join[isn't such a good idea]. This is something for me to dig into (I do believe learning watermarks might be on the cards 🫣), so stay tuned :)
