--- a/content/post/flink-sql-wrangling.adoc
+++ b/content/post/flink-sql-wrangling.adoc
@@ -314,7 +314,7 @@ CREATE TABLE measures_with_pk
 
 Over in the Confluent Cloud UI we can see the cleanup policy of the topic is now `Compact`:
 
-image::/images/2025/03/CleanShot 2025-03-04 at 15.09.22.webp[]
+image::/images/2025/03/CleanShot%202025-03-04%20at%2015.09.22.webp[]
 
 Let's do the same for the `stations` data:
 
@@ -706,13 +706,13 @@ dateTime                value measure                   r_rowtime               
 
 The magic button in the Flink shell is `M` - this shows the underlying changelog that the client is displaying. Note the highlights on the `Operation` column to see what's happening:
 
-image::/images/2025/03/CleanShot 2025-03-05 at 17.06.02@2x.webp[]
+image::/images/2025/03/CleanShot%202025-03-05%20at%2017.06.02@2x.webp[]
 
 First up a row with no match is emitted (`+I`) from the join. After that a match is found, so the first result is retracted (`-D`) and replaced (the second `+I`). This happens for each of the four rows that we saw above.
 
 Something else I saw in looking more closely at the rowtimes in the data was this:
 
-image::/images/2025/03/CleanShot 2025-03-05 at 17.21.33@2x.webp[]
+image::/images/2025/03/CleanShot%202025-03-05%20at%2017.21.33@2x.webp[]
 
 A seeming duplicate, after the initial retract & restatement with a successful join to `measures`, with a difference `$ROWTIME` on the `readings` table.
 
@@ -732,7 +732,7 @@ SELECT r.`dateTime`,
 
 Now it gets stranger…I don't get the `NULL` at all—but I do get duplicates:
 
-image::/images/2025/03/CleanShot 2025-03-05 at 17.34.29@2x 1.webp[]
+image::/images/2025/03/CleanShot%202025-03-05%20at%2017.34.29@2x 1.webp[]
 
 === Where are the duplicates coming from?
 
@@ -883,7 +883,7 @@ SELECT dateTime, `measure`, COUNT(*) FROM readings WHERE `measure` = 'F7070-flow
  GROUP BY dateTime, `measure` ;
 ----
 
-image::/images/2025/03/CleanShot 2025-03-07 at 12.25.16@2x.webp[]
+image::/images/2025/03/CleanShot%202025-03-07%20at%2012.25.16@2x.webp[]
 
 === Why are there duplicates in `readings`?
 
@@ -926,7 +926,7 @@ SELECT * FROM readings_cte
 
 Yep, still duplicates - with different `$rowtime`
 
-image::/images/2025/03/CleanShot 2025-03-07 at 14.35.45@2x.webp[]
+image::/images/2025/03/CleanShot%202025-03-07%20at%2014.35.45@2x.webp[]
 
 Going all the way back to the source, here are the messages on the Kafka topic:
 
@@ -1093,11 +1093,11 @@ SELECT  r.`dateTime`,
 
 and…it works!
 
-image::/images/2025/03/CleanShot 2025-03-07 at 17.12.32.gif[]
+image::/images/2025/03/CleanShot%202025-03-07%20at%2017.12.32.gif[]
 
 Let's take a look at a specific station:
 
-image::/images/2025/03/CleanShot 2025-03-07 at 17.29.32@2x.webp[]
+image::/images/2025/03/CleanShot%202025-03-07%20at%2017.29.32@2x.webp[]
 
 ---
 
