update header image

--- a/content/post/flink-sql-wrangling.adoc
+++ b/content/post/flink-sql-wrangling.adoc
@@ -2,7 +2,7 @@
 draft: false
 title: 'Data Wrangling with Flink SQL'
 date: "2025-03-10T16:57:44Z"
-image: "/images/2025/03/CleanShot%202025-03-05%20at%2017.06.02@2x.webp"
+image: "/images/2025/03/h_flink_wrangling.webp"
 thumbnail: "/images/2025/03/t_IMG_7777.webp"
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
