s/blog/blog articles/g

--- a/content/post/write-more-blogs.adoc
+++ b/content/post/write-more-blogs.adoc
@@ -1,6 +1,6 @@
 ---
 draft: false
-title: "Write more blogs, not fewer (Don't leave the scraps on the cutting floor)"
+title: "Write more blogs articles, not fewer (Don't leave the scraps on the cutting floor)"
 date: "2025-03-11T10:41:44Z"
 image: "/images/2025/03/h_IMG_7608.webp"
 thumbnail: "/images/2025/03/t_IMG_7694.webp"
