--- a/content/post/write-more-blogs.adoc
+++ b/content/post/write-more-blogs.adoc
@@ -7,6 +7,7 @@ thumbnail: "/images/2025/03/t_IMG_7694.webp"
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - Blogging
+- DevRel
 ---
 
 The perfect blog article takes the reader on a journey that some would say looks like this:
