--- a/content/post/write-more-blogs.adoc
+++ b/content/post/write-more-blogs.adoc
@@ -10,7 +10,7 @@ categories:
 - DevRel
 ---
 
-The perfect blog article takes the reader on a journey that some would say looks like this:
+Some would say that the perfect blog article takes the reader on a journey on in which the development process looks like this:
 
 image::/images/2025/03/blog_content1.excalidraw.webp[]
 
@@ -54,7 +54,7 @@ There is value in the problems you encountered.
 The problem is that having solved them, hindsight presents them as "obvious" and we don't write them up.
 Even worse, we're embarrassed in what we didn't know, and hesitate to talk about it.
 
-TIP: If you had to go through it, so will others.
+TIP: 💡 If you had to go through it, so will others.
 
 Those things you learnt along the way, that is _valuable_.
 
@@ -62,3 +62,4 @@ image::/images/2025/03/blog_content4.excalidraw.webp[]
 
 That's why on this blog you'll find some articles that are barely more than a scrap of an error that I couldn't find a Google hit for so wrote up, through to deep-dives into concepts that I needed to understand better.
 It was useful to me—hopefully it'll be useful to someone else :)
+
