--- a/content/post/bash_group_by.adoc
+++ b/content/post/bash_group_by.adoc
@@ -8,7 +8,7 @@ credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - Data Engineering
 - Bash
-- Kafkacat
+- kcat (kafkacat)
 ---
 
 :source-highlighter: rouge
