--- a/content/post/copying_data_kafkacat.adoc
+++ b/content/post/copying_data_kafkacat.adoc
@@ -4,7 +4,7 @@ date: 2019-09-29T10:43:45+02:00
 image: "/images/2019/09/IMG_2653.jpg"
 thumbnail: "/images/2019/09/IMG_2657.jpg"
 categories:
-- kafkacat
+- kcat (kafkacat)
 - Confluent Cloud
 ---
 
