--- a/content/post/counting_kafka_messages.adoc
+++ b/content/post/counting_kafka_messages.adoc
@@ -6,7 +6,7 @@ thumbnail: "/images/2020/08/IMG_6248.jpeg"
 draft: false
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
-- Kafkacat
+- kcat (kafkacat)
 - ksqlDB
 ---
 
