--- a/content/post/csv-into-kafka-dirty.adoc
+++ b/content/post/csv-into-kafka-dirty.adoc
@@ -6,7 +6,7 @@ image: "/images/2021/02/IMG_8926.jpeg"
 thumbnail: "/images/2021/02/IMG_9122.jpeg"
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
-- kafkacat
+- kcat (kafkacat)
 - csv
 - ksqldb
 - delimited data
