--- a/content/post/deleting-a-kafka-connect-connector-without-the-rest-api.adoc
+++ b/content/post/deleting-a-kafka-connect-connector-without-the-rest-api.adoc
@@ -6,7 +6,7 @@ thumbnail: "/images/2019/05/IMG_9954.jpg"
 categories:
 - Kafka Connect
 - REST
-- kafkacat
+- kcat (kafkacat)
 ---
 
 Kafka Connect exposes a https://docs.confluent.io/current/connect/references/restapi.html[REST interface] through which all config and monitoring operations can be done. You can create connectors, delete them, restart them, check their status, and so on. But, I found a situation recently in which I needed to delete a connector and couldn't do so with the REST API. Here's another way to do it, by amending the configuration Kafka topic that Kafka Connect in distributed mode uses to persist configuration information for connectors. Note that this is not a recommended way of working with Kafka Connect—the REST API is there for a good reason :) 
