--- a/content/post/jq-to-kafkacat-with-keys.adoc
+++ b/content/post/jq-to-kafkacat-with-keys.adoc
@@ -7,7 +7,7 @@ draft: false
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - jq
-- kafkacat
+- kcat (kafkacat)
 ---
 
 :source-highlighter: rouge
