--- a/content/post/kafka-connect-skip-bad-records-jdbc-sink.adoc
+++ b/content/post/kafka-connect-skip-bad-records-jdbc-sink.adoc
@@ -7,7 +7,7 @@ categories:
 - Kafka Connect
 - JDBC sink
 - Consumer Group
-- kafkacat
+- kcat (kafkacat)
 ---
 
 = Skipping bad records with the Kafka Connect JDBC sink connector
