--- a/content/post/ksqldb-sonos.adoc
+++ b/content/post/ksqldb-sonos.adoc
@@ -9,7 +9,7 @@ categories:
 - Sonos
 - InfluxDB
 - Grafana
-- kafkacat
+- kcat (kafkacat)
 ---
 
 I'm quite a fan of Sonos audio equipment but recently had some trouble with some of the devices glitching and even cutting out whilst playing. Under the covers Sonos stuff is running Linux (of course) and exposes some diagnostics through a rudimentary frontend that you can access at `\http://<sonos player IP>:1400/support/review`: 
