--- a/content/post/monitoring-kafka-ingest.adoc
+++ b/content/post/monitoring-kafka-ingest.adoc
@@ -5,7 +5,7 @@ image: "/images/2020/04/IMG_3803.jpeg"
 thumbnail: "/images/2020/04/IMG_3756.jpeg"
 categories:
 - Kafka
-- kafkacat
+- kcat (kafkacat)
 - Telegram
 - Monitoring
 ---
