--- a/content/post/primitive-keys-in-ksqldb.adoc
+++ b/content/post/primitive-keys-in-ksqldb.adoc
@@ -10,7 +10,7 @@ categories:
 - Debezium
 - Single Message Transform
 - Kafka Connect
-- kafkacat
+- kcat (kafkacat)
 ---
 
 ksqlDB 0.7 will add support for message keys as primitive data types beyond just `STRING` (which is all we've had to date). That means that Kafka messages are going to be much easier to work with, and require less wrangling to get into the form in which you need them. Take an example of a database table that you've ingested into a Kafka topic, and want to join to a stream of events. Previously you'd have had to take the Kafka topic into which the table had been ingested and run a ksqlDB processor to re-key the messages such that ksqlDB could join on them. _Friends, I am here to tell you that this is no longer needed!_
