--- a/content/post/reset-kafka-connect-source-connector-offsets.adoc
+++ b/content/post/reset-kafka-connect-source-connector-offsets.adoc
@@ -6,7 +6,7 @@ thumbnail: "/images/2019/08/IMG_9079.jpg"
 categories:
 - Kafka Connect
 - offsets
-- kafkacat
+- kcat (kafkacat)
 ---
 
 = Resetting Kafka Connect source connector offsets
