--- a/content/post/influxdb-kafka.adoc
+++ b/content/post/influxdb-kafka.adoc
@@ -6,7 +6,7 @@ thumbnail: "/images/2020/01/IMG_2254.jpeg"
 categories:
 - Kafka Connect
 - InfluxDB
-- kafkacat
+- kcat (kafkacat)
 - Serialisation
 ---
 
