--- a/content/post/install-kafkacat-fedora.adoc
+++ b/content/post/install-kafkacat-fedora.adoc
@@ -5,7 +5,7 @@ image: "/images/2020/04/IMG_3895.jpeg"
 thumbnail: "/images/2020/04/IMG_3969.jpeg"
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
-- kafkacat
+- kcat (kafkacat)
 - fedora
 ---
 
