--- a/content/post/kafka-connect-debezium-to-confluent-cloud.adoc
+++ b/content/post/kafka-connect-debezium-to-confluent-cloud.adoc
@@ -6,7 +6,7 @@ thumbnail: "/images/2019/10/IMG_2849.jpg"
 categories:
 - Kafka Connect
 - Debezium
-- kafkacat
+- kcat (kafkacat)
 - Confluent Cloud
 ---
 
