--- a/content/post/kafka-data-profiling.adoc
+++ b/content/post/kafka-data-profiling.adoc
@@ -7,7 +7,7 @@ thumbnail: "/images/2021/03/kafka-visidata.gif"
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - Data
-- kafkacat
+- kcat (kafkacat)
 - visidata
 ---
 
