--- a/content/post/manually-delete-connector-from-kafka-connect.adoc
+++ b/content/post/manually-delete-connector-from-kafka-connect.adoc
@@ -5,7 +5,7 @@ image: "/images/2019/06/IMG_0579.jpg"
 thumbnail: "/images/2019/06/IMG_0644.jpg"
 categories:
 - Kafka Connect
-- kafkacat
+- kcat (kafkacat)
 ---
 
 Kafka Connect has as https://docs.confluent.io/current/connect/references/restapi.html[REST API] through which all config should be done, including removing connectors that have been created. Sometimes though, you might have reason to want to manually do this—and since Kafka Connect running in distributed mode uses Kafka as its persistent data store, you can achieve this by manually writing to the topic yourself. 
