--- a/content/post/rpi-wifi.adoc
+++ b/content/post/rpi-wifi.adoc
@@ -5,7 +5,7 @@ image: "/images/2020/03/IMG_3358.jpeg"
 thumbnail: "/images/2020/03/IMG_3332.jpeg"
 categories:
 - Raspberry pi
-- kafkacat
+- kcat (kafkacat)
 - Confluent Cloud
 - wireshark
 - tshark
