--- a/content/post/viewing_kafka_hex.adoc
+++ b/content/post/viewing_kafka_hex.adoc
@@ -10,7 +10,7 @@ thumbnail: "/images/2020/05/IMG_4466.jpeg"
 draft: false
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
-- kafkacat
+- kcat (kafkacat)
 - hexdump
 - ksqlDB
 - JSON
