--- a/content/post/managed-connectors.adoc
+++ b/content/post/managed-connectors.adoc
@@ -163,7 +163,7 @@ If you do use the `confluent` CLI note that the terminology is to create a Conne
 The https://docs.confluent.io/cloud/current/api.html[Confluent Cloud API] uses an API key for authentication.
 For working with connectors the API key should be created for access to the `cloud` resource (see `confluent api-key create --resource cloud` above).
 The docs show how to create an `Authorization` header with a base64-encoded representation of the API key.
-A simpler way is to pass it as a username/password combo, separated by a colon (i.e. `API_KEY`:`API_SECRET`).
+A simpler way is to pass it as a username/password combo, separated by a colon (i.e. `API_KEY:API_SECRET`).
 
 In `curl` you use `--user` like this:
 
