--- a/content/post/managed-connectors.adoc
+++ b/content/post/managed-connectors.adoc
@@ -1,6 +1,6 @@
 ---
 draft: false
-title: "Creating an HTTP Source connector on Confluent Cloud"
+title: "Creating an HTTP Source connector on Confluent Cloud from the CLI"
 date: "2025-03-13T11:29:40Z"
 image: "/images/2025/03/h_IMG_6392.webp"
 thumbnail: "/images/2025/03/t_IMG_6004.webp"
@@ -15,6 +15,8 @@ categories:
 
 In this blog article I'll show you how you can use the https://docs.confluent.io/confluent-cli/current/overview.html[`confluent` CLI] to set up a Kafka cluster on Confluent Cloud, the necessary API keys, and then a managed connector.
 The connector I'm setting up is the https://docs.confluent.io/cloud/current/connectors/cc-http-source-v2.html[HTTP Source (v2)] connector.
+
+image::/images/2025/03/managed-http-connector.webp[]
 
 It's part of a pipeline that I'm working on to pull in https://environment.data.gov.uk/flood-monitoring/doc/reference[a feed of data from the UK Environment Agency] for processing.
 The data is spread across three endpoints, and one of the nice features of the HTTP Source (v2) connector is that one connector can pull data from more than one endpoint.
