fix broken image

--- a/content/post/flink-sql-wrangling.adoc
+++ b/content/post/flink-sql-wrangling.adoc
@@ -314,7 +314,7 @@ CREATE TABLE measures_with_pk
 
 Over in the Confluent Cloud UI we can see the cleanup policy of the topic is now `Compact`:
 
-image::/images/2025/03/CleanShot%202025-03-04%20at%2015.09.22.webp[]
+image::/images/2025/03/CleanShot%202025-03-04%20at%2015.09.22.png[]
 
 Let's do the same for the `stations` data:
 
