--- a/content/post/duckdb-ui.adoc
+++ b/content/post/duckdb-ui.adoc
@@ -43,24 +43,9 @@ image::/images/2025/03/CleanShot2025-03-14at11.35.06@2x.webp[]
 It's a notebook.
 If you're familiar with Jupyter or Zeppelin you'll be right at home.
 
-Paste the following into a cell and ctrl-enter to run it. All very nice, all very intuitive.
+I'll paste my `CREATE TABLE` statements in that fetch the data from the API. Press ctrl-enter to run it. All very nice, all very intuitive.
 
-[source,sql]
-----
-CREATE TABLE readings_stg AS
-    SELECT *
-    FROM read_json('https://environment.data.gov.uk/flood-monitoring/data/readings');
-
-CREATE TABLE measures_stg AS
-    SELECT *
-    FROM read_json('https://environment.data.gov.uk/flood-monitoring/id/measures');
-
-CREATE TABLE stations_stg AS
-    SELECT *
-    FROM read_json('https://environment.data.gov.uk/flood-monitoring/id/stations');
-----
-
-Now I have tables
+Now I have tables:
 
 image::/images/2025/03/CleanShot2025-03-14at11.37.01@2x.webp[]
 
