--- a/content/post/duckdb-ui.adoc
+++ b/content/post/duckdb-ui.adoc
@@ -62,11 +62,7 @@ Very usable interface for exploring the data
 
 image::/images/2025/03/CleanShot2025-03-14at11.50.38@2x.webp[]
 
-Filtering is easy
-
-image::/images/2025/03/CleanShot2025-03-14at11.52.12@2x.webp[]
-
-You can change the order and visibility of columns
+Filtering the returned data is easy, as is changing the order and visibility of columns
 
 image::/images/2025/03/CleanShot2025-03-14at11.54.20@2x.webp[]
 
