--- a/content/post/duckdb-ui.adoc
+++ b/content/post/duckdb-ui.adoc
@@ -16,7 +16,7 @@ categories:
 
 I wrote a couple of weeks ago about link:/2025/02/28/exploring-uk-environment-agency-data-in-duckdb-and-rill/[using DuckDB and Rill Data] to explore a new data source that I'm working with.
 I wanted to understand the data's structure and distribution of values, as well as how different entities related.
-This week DuckDB 1.21 was released and that little 0.01 version boost brought with it the https://duckdb.org/2025/03/12/duckdb-ui.html[DuckDB UI].
+This week DuckDB 1.2.1 was released and that little 0.0.1 version boost brought with it the https://duckdb.org/2025/03/12/duckdb-ui.html[DuckDB UI].
 
 Here I'll go through the same process as I did before, and see how much of what I was doing can be done in DuckDB alone now.
 
@@ -49,7 +49,7 @@ Now I have tables:
 
 image::/images/2025/03/CleanShot2025-03-14at11.37.01@2x.webp[]
 
-Explode the JSON array into a new table.
+I'll explode the JSON array into a new table.
 Note the distribution details of the data in each field for the table.
 
 image::/images/2025/03/CleanShot2025-03-14at11.47.57@2x.webp[]
@@ -93,7 +93,7 @@ Following on link:/2025/02/28/exploring-uk-environment-agency-data-in-duckdb-and
 
 image::/images/2025/03/CleanShot2025-03-14at12.07.41@2x.webp[]
 
-Along with the same cardinality information on ther `measure` field that highlighted I had a problem in my understanding of the API since I only had data for one measure:
+Along with the same cardinality information on the `measure` field that highlighted I had a problem in my understanding of the API since I only had data for one measure:
 
 image::/images/2025/03/CleanShot2025-03-14at12.08.10@2x.webp[]
 
@@ -103,7 +103,7 @@ For that, I'd still need Rill, which is what this is taken from:
 .Charting data in Rill Data
 image::/images/2025/03/rillchart.webp[]
 
-So, back to the exploration.
+So, back to the exploration in DuckDB UI.
 We've realised that we need to pull in more data, so rebuild the `readings` table using the `readings?today` API endpoint
 
 image::/images/2025/03/CleanShot2025-03-14at12.12.56@2x.webp[]
