Fix broken link

--- a/README.adoc
+++ b/README.adoc
@@ -15,19 +15,18 @@ docker run --rm -it \
   -v $(pwd):/src \
   -p 1313:1313 \
   klakegg/hugo:0.105.0-asciidoctor-onbuild \
-  server --buildFuture --buildDrafts
+  server 
 ----
 
 == Creating a new post
 
 [source,bash]
 ----
-git checkout -b my_new_post
-
-docker run --rm -it \
-  -v $(pwd):/src \
-  klakegg/hugo:0.105.0-asciidoctor-onbuild \
-  new content/post/my_new_post.adoc
+id=my-new-article-slug \
+&& git checkout main && git pull && git checkout -b $id && docker run --rm -it \
+ -v $(pwd):/src \
+ klakegg/hugo:0.105.0-asciidoctor-onbuild \
+ new content/post/$id.adoc
 ----
 
 == Link checking
