--- a/content/post/interesting-2025-03.adoc
+++ b/content/post/interesting-2025-03.adoc
@@ -24,7 +24,7 @@ _The problem with publishing link:/2025/02/03/interesting-links-february-2025/[F
 ** https://rmoff.net/2025/03/20/building-a-data-pipeline-with-duckdb/[Building a Data Pipeline with DuckDB]
 ** https://rmoff.net/2025/02/27/duckdb-tricks-renaming-fields-in-a-select-across-tables/[DuckDB Tricks: Renaming Fields in a SELECT * across tables]
 ** https://rmoff.net/2025/02/28/exploring-uk-environment-agency-data-in-duckdb-and-rill/[Exploring UK Environment Agency Data in DuckDB and Rill]
-* The https://duckdb.org/2025/03/12/duckdb-ui.html[release of a built-in UI] got the DuckDB a flappin' and quackin'. I wrote two blog posts about it:
+* The https://duckdb.org/2025/03/12/duckdb-ui.html[release of a built-in UI] got the DuckDB community a flappin' and quackin'. I wrote two blog posts about it:
 ** https://rmoff.net/2025/03/14/kicking-the-tyres-on-the-new-duckdb-ui/[Kicking the Tyres on the New DuckDB UI]
 ** https://rmoff.net/2025/03/19/exporting-notebooks-from-duckdb-ui/[Exporting Notebooks from DuckDB UI]
 * DuckDB also https://duckdb.org/2025/03/14/preview-amazon-s3-tables.html[added support] for reading from https://aws.amazon.com/s3/features/tables/[Amazon S3 Tables] (Amazon's managed Apache Iceberg offering).
@@ -36,7 +36,7 @@ _The problem with publishing link:/2025/02/03/interesting-links-february-2025/[F
 
 * Apache Kafka 4.0 has been released. See https://dlcdn.apache.org/kafka/4.0.0/RELEASE_NOTES.html[release notes], https://kafka.apache.org/blog#apache_kafka_400_release_announcement[blog post], and https://kafka.apache.org/downloads[download].
 * https://blog.iggy.rs/posts/apache-incubator/[Iggy has joined the Apache Incubator]. They also published an https://blog.iggy.rs/posts/transparent-benchmarks/[interesting post] about benchmarking.
-* Speaking of benchmarking, RedPanda and StreamNative had a https://www.linkedin.com/pulse/few-thoughts-streamnative-benchmark-matthew-schumpert-h8qbf/[dust up] over a https://streamnative.io/blog/how-we-run-a-5-gb-s-kafka-workload-for-just-50-per-hour[benchmark].
+* Speaking of benchmarking, Redpanda and StreamNative had a https://www.linkedin.com/pulse/few-thoughts-streamnative-benchmark-matthew-schumpert-h8qbf/[dust up] over a https://streamnative.io/blog/how-we-run-a-5-gb-s-kafka-workload-for-just-50-per-hour[benchmark].
 * https://wangjunfei.com/2025/02/10/Announcing-Stonemq-A-high-performance-and-efficient-message-queue-developed-in-Rust/[Stonemq] is a "A high-performance and efficient message queue developed in Rust" that "aims to outperform Kafka in scenarios with massive-scale queue clusters".
 * A post about the https://broot.ca/kafka-at-the-low-end.html[challenges of using Kafka as a queue]—which as the author notes starts to become moot once KIP-932 is released, which it is now with https://dlcdn.apache.org/kafka/4.0.0/RELEASE_NOTES.html[Apache Kafka 4.0]. Gunnar Morling takes a look at the new functionality https://www.morling.dev/blog/kip-932-queues-for-kafka/[here].
 * An example of https://callistaenterprise.se/blogg/teknik/2025/01/03/kroxylicious-kafka-encryption/[Kafka Record Encryption] using https://kroxylicious.io/[Kroxylicious].
