One CP can have more than one workspace

--- a/content/post/cc-flink-api.adoc
+++ b/content/post/cc-flink-api.adoc
@@ -44,7 +44,7 @@ Each environment can have many compute pools, as can each cloud provider and reg
 You might create multiple compute pools for the purpose of workload isolation, or cost management.
 
 If you want to work with Flink SQL interactively through Confluent Cloud's web interface you'll need a _workspace_.
-Each compute pool has one and only one workspace.
+Each compute pool has one or more workspaces.
 You don't have to have a workspace if you're only submitting Flink SQL through the API or CLI.
 
 == Authentication
