--- a/content/post/opml.adoc
+++ b/content/post/opml.adoc
@@ -50,11 +50,11 @@ There's a free plan—I pay for the pro one because it's worth it and I like sup
 
 == So…where are these blogs then?
 
-**Here's the OPML for link:/code/rmoff-opml-2024-05-22.xml[all the blogs that I follow at the moment]**. 
+**Here's the OPML for link:/code/rmoff-opml-2024-05-22.xml[all the blogs that I follow at the moment]. They're live links so should reflect my current subscriptions, not just as they were when I wrote this article**.
 
 My RSS feeds are skewed towards my interest in the data industry—streaming, analytics, data engineering, RDBMS. And just to make it fun it's got some general tech feeds (HackerNews, Lobste.rs), some podcasts, and some running blogs too. Cos, it's mine and I curate it :-P
 
-The feeds are split into folders of roughly logical grouping. I've shared each one below as individual OPML—but if you want to follow along dynamically as I add (or remove) feeds from these folders, you can use the RSS feed of each. 
+The feeds are split into folders of roughly logical grouping. I've shared each one below as individual OPML—but if you want to follow along dynamically as I add (or remove) feeds from these folders, you can use the RSS feed of each.
 
 image::/images/2024/05/rss.webp[I heard you liked RSS feeds - so I made an RSS feed of your RSS feeds]
 
