--- a/content/post/il-2025-04.adoc
+++ b/content/post/il-2025-04.adoc
@@ -84,4 +84,4 @@ _Nothing to do with data, but stuff that I've found interesting or has made me s
 
 ---
 
-TIP: If you want to try and keep up you might like to read about https://rmoff.net/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
+TIP: If you like these kind of links you might like to read about https://rmoff.net/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
