--- a/content/post/il-2025-04.adoc
+++ b/content/post/il-2025-04.adoc
@@ -43,9 +43,11 @@ categories:
 * A new paper discussing https://arxiv.org/abs/2504.10438[Snowflake Dynamic Tables]
 * A Flink CDC Pipeline connector for Apache Iceberg https://github.com/apache/flink-cdc/blob/master/docs/content/docs/connectors/pipeline-connectors/iceberg.md[has been added into the project] ahead of Flink CDC release 3.4.0
 * https://github.com/turbolytics/sql-flow[SQLFlow: DuckDB for Streaming Data]
+* A good writeup of https://blog.zomato.com/eliminating-bottlenecks-in-real-time-data-streaming-a-zomato-ads-flink-journey[performance optimisations made in Zomato's Flink data streaming pipeline]
 * https://www.alibabacloud.com/blog/compare-flink-sql-and-datastream-api-comprehensive-guide-for-new-developers_602133[Comparing Flink SQL and DataStream API]
 * https://blog.devgenius.io/build-kafka-streams-apps-faster-with-kstreamplify-and-spring-boot-86999d586024[Build Kafka Streams Apps Faster] with https://github.com/michelin/kstreamplify[kstreamplify] and Spring Boot
 * A proposal (SPIP) to add a https://docs.google.com/document/d/1PsSTngFuRVEOvUGzp_25CQL1yfzFHFr02XdMfQ7jOM4/edit[Declarative Pipeline Framework] to Apache Spark
+* Pedro Mazala writes about https://pedromazala.substack.com/p/the-case-for-a-custom-window-in-flink[The case for a Custom Window in Flink]
 * https://community.alibabacloud.com/blog/flash-a-next-gen-vectorized-stream-processing-engine-compatible-with-apache-flink_602088[Flash: A Next-gen Vectorized Stream Processing Engine Compatible with Apache Flink]
 * A talk from Liang Wu about https://youtu.be/jaLTCgFQL0E?feature=shared&t=170[LinkedIn's internal Darwin tool for running Flink SQL in a notebook-like interface]
 
